# OsmAnd-tools

./: .editorconfig  .gitignore  LICENSE  README.md  mirror_externals.sh  tools.cmake
BitcoinSender/: .gitignore  .project  README.md  pom.xml
OsmAndMapCreator/: .classpath  .gitignore  .project  OsmAndMapCreator.bat  OsmAndMapCreator.sh  OsmLiveObfCreator.sh  build.xml  inspector.bat  inspector.sh  local.properties.sample  native-build.sh  runRouteTests.bat  runRouteTests.sh  utilities.bat  utilities.sh
OsmAndMapCreator/src/: osmand_odb.proto
OsmAndServer/: .classpath  .project  build.xml
OsmAndUbuntu/: osmand.pro
OsmAndUbuntu/cpp/: MainApplicationSettings.cpp  MainApplicationSettings.h  Map.cpp  Map.h  MapActions.cpp  MapActions.h  MapLayersData.cpp  MapLayersData.h  MapViewAdapter.cpp  MapViewAdapter.h  MapViewLayer.cpp  MapViewLayer.h  RootContext.h  applicationdata.cpp  applicationdata.h  main.cpp
OsmAndUbuntu/qml/: files.qml  main.qml  map.qml
TravelGuideCreator/: .gitignore  build.gradle  settings.gradle
WikipediaConverter/: .classpath  .project  Readme.md  build.xml  pom.xml  prepare.sh  prepare_wikivoyage.sh
WikipediaConverter/work/: prepare.sh
ais/test-server/: AIS-nmea-sample.txt  ecosystem.config.js  package.json  server.js
cpp-tools/map-rasterizer/: main.cpp
cpp-tools/map-viewer/: CMakeLists.txt  main.cpp  x11.cpp
cpp-tools/obf-inspector/: CMakeLists.txt  main.cpp
cpp-tools/route-tester/: main.cpp
cpp-tools/style-compiler/: main.cpp
cpp-tools/style-evaluator/: CMakeLists.txt  main.cpp
db/: operation-sqlite.ddl  search-test-sqlite.ddl  sql_changeset_schema
docker/: .gitignore  Dockerfile  Readme.md
iap-generator/: CMakeLists.txt  main.cpp
java-tools/: .gitignore  build.gradle  settings.gradle
java-tools/BitcoinSender/: .gitignore  LICENSE  build.gradle
java-tools/EmailSender/: build.gradle  gradle.properties
java-tools/ExceptionAnalyzer/: .gitignore  build.gradle
java-tools/OsmAndMapCreator/: .gitignore  build.gradle  build.xml  gradle.properties
java-tools/OsmAndMapCreatorUtilities/: .gitignore  Montenegro_europe_2.road.obf.hhdb  Ukraine_europe_2.road.obf.db  Wikipedia_generation.md  brands.lst  build.gradle  test.sqlite
java-tools/OsmAndServer/: .gitignore  README.md  build.gradle  deps  rest-features.md
java-tools/OsmAndServerAdmin/: build.gradle
java-tools/OsmAndServerUtilities/: .gitignore  build.gradle  gradle.properties  logging.properties  utilities.sh
java-tools/OsmAndUtilities/: build.gradle
java-tools/SubscriptionsAnalyzer/: .gitignore  build.gradle
java-tools/TravelGuideCreator/: build.gradle  gradle.properties
java-tools/WikipediaConverter/: build.gradle  prepare.sh  prepare_wikivoyage.sh
map-rasterizer/: CMakeLists.txt  main.cpp
map-viewer/: CMakeLists.txt  main.cpp
obf-generation/: boundaries-generate.xml  indexes-address-batch-generate-inmem.xml  indexes-address-batch-generate.xml  indexes-addresses-batch-generate-inmem.xml  indexes-batch-generate-aws.xml  indexes-batch-generate-builder.xml  indexes-batch-generate-hot.xml  indexes-batch-generate-inmem.xml  indexes-batch-generate-test.xml  indexes-batch-generate.xml  indexes-generate.sh  indexes-roads-batch-generate.xml  regions-batch-generate-inmem.xml  srtm-batch-generate.xml  taginfo.groovy
obf-generation/address_maps/: Readme_polygons.txt  address-batch-generate-inmem.xml  address-batch-generate.xml  generate_addresses.sh  generate_addresses_via_osmfilter.sh  russian-federation.poly  usa.poly
obf-generation/basemap/: README  query_points_osm.py  query_polygons_osm.py  query_roads_osm.py
obf-generation/changesets/: create_reports.py  generate_reports.sh  rotate_db.sh  sql_queries  update-changesets.py
obf-generation/heightdb/: generate.sh
obf-generation/heightdbs/: bake_heightdbs.sh  bake_server_heightdbs.sh  overlap.py  pack.py  packer.py  slicer.py
obf-generation/heightmap/: .gitignore  generate.sh  generate_tile.sh  overlap.py  packer.py  slicer.py  test_gdal2tiles.py  tiler.py
obf-generation/hh-routing/: generate-hh-routing.sh
obf-generation/hillshade/: TMSsqlite2Osmandsqlite.py  color_slope.txt  gdal2tiles_gray2alpha_sqlite.py  gdalcopyproj.py  hillshade_alpha.txt  notes_hillshade.sh  rename_tiff.sh  slopes_gor.txt  slopes_orange.txt
obf-generation/major_roads/: generate-major_roads.sh  major_roads-batch-generate-inmem.xml  major_roads-batch-generate.xml
obf-generation/osm-live/: Readme.md  generate_diff_and_split.sh  generate_obf_diff.sh  generate_obf_start_end.sh  get_hourly_diff_osm.sh
obf-generation/padus/: convert_padus.sh
obf-generation/regions/: address-indexes.xml  big_indexes.xml  full_indexes.xml  hot_indexes.xml  indexes.xml
obf-generation/reviews/: .gitignore  README.md  download_mangrove.py  generate.sh  setup_utils.sh
obf-generation/traffic/: process_road_data.sh
obf-generation/travel-gpx/: README.md
obf-generation/us-maps/: aggregate_rec_area_activities_template.py  batch-padus.xml  batch-usfs.xml  convert_padus.sh  convert_usfs.sh
obf-generation/us_maps/: add_file_name_field.py  batch-us_maps.xml  convert_padus.sh  convert_us_maps.sh  dump_esri.py  dump_esri_us.py  symbology-style.db
obf-generation/wiki/: download.sh  download_coord.sh  wiki-logging.properties
obf-inspector/: CMakeLists.txt  main.cpp
obf-verifier/: CMakeLists.txt  main.cpp
obf-viewer/: .gitignore  mainwindow.cpp  mainwindow.h  mainwindow.ui  obf-viewer.pro
py-tools/: mapdl.py  wanted-example.txt
python/: block_images_job.py  resize_images_job.py
python/lib/: OpenAIClient.py  QueueThreadPoolExecutor.py  block_images_utils.py  database_api.py  download_utils.py  utils.py
route-tester/: CMakeLists.txt  main.cpp
style-compiler/: CMakeLists.txt  main.cpp
style-evaluator/: main.cpp
svg_maplegend_generator/: config.json  generate_svg_map_legend.py
weather/: .gitignore  browser.html  cloud_color.txt  download_noaa_gfs.sh  download_weather.sh  mktiles.sh  precip_color.txt  precip_ecmwf_color.txt  pressure_color.txt  set_band_desc.py  slicer.py  temperature_color.txt  wind_color.txt
(+1268 files in other folders)
